# powerstream-venus-bridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions_ota.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1
.github/workflows/: build.yml  release.yml
docs/: RESEARCH.md
src/: CMakeLists.txt  ble_scan.c  ble_scan.h  crypto.c  crypto.h  http_server.c  index_html.h  main.c  modbus.c  modbus.h  packet.c  packet.h  ps_config.h.example  ps_data.c  ps_data.h  ps_proto.c  ps_proto.h  rawframe.c  rawframe.h  settings.c  settings.h  sunspec.c  sunspec.h  updatecheck.c  updatecheck.h  weblog.c  weblog.h  wifi_apsta.c  wifi_apsta.h  wifi_secrets.h.example
src/web/: genheader.py  index.html
